--- a/package.json
+++ b/package.json
@@ -15,16 +15,18 @@
     "axios": "^1.11.0",
     "bcryptjs": "^3.0.2",
     "chart.js": "^4.5.0",
+    "dotenv": "^17.2.1",
     "install": "^0.13.0",
     "jose": "^6.0.12",
     "marked": "^16.1.1",
-    "mysql2": "^3.14.2",
+    "mysql2": "^3.14.3",
     "next": "15.4.4",
     "next-auth": "^4.24.11",
     "npm": "^11.5.1",
     "react": "19.1.0",
     "react-chartjs-2": "^5.3.0",
-    "react-dom": "19.1.0"
+    "react-dom": "19.1.0",
+    "readline": "^1.3.0"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
